--- a/youtube/styles/yt-general.css
+++ b/youtube/styles/yt-general.css
@@ -2,12 +2,16 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
+  font-size: 'Roboto', Arial;
+}
+
+html {
+  font-size: 62.5%;
 }
 
 body {
-  font-size: 'Roboto', Arial;
   background-color: #0f0f0f;
-  padding: 0 0 300px;
+  padding-bottom: 500px;
 }
 
 a {
