--- a/youtube/styles/yt-header.css
+++ b/youtube/styles/yt-header.css
@@ -1,10 +1,11 @@
 .header {
-  height: 56px;
-  padding: 0 30px 0 15px;
+  height: 5.6rem;
+  padding: 0 3rem 0 1.5rem;
   position: fixed;
     top: 0;
     right: 0;
     left: 0;
+    z-index: 10;
   display: flex;
     align-items: center;
     justify-content: space-between;
@@ -15,7 +16,7 @@
 }
 
 .header-left {
-  width: 165px;
+  width: 16.5rem;
   display: flex;
   align-items: center;
     justify-content: space-between;
@@ -28,8 +29,8 @@
 }
 
 .header-left_menu {
-  width: 40px;
-  height: 40px;
+  width: 4rem;
+  height: 4rem;
   transition: .15s;
     justify-content: center;
 }
@@ -40,29 +41,29 @@
 }
 
 .header-left_youtube-logo {
-  width: 125px;
+  width: 12.5rem;
   position: relative;
   justify-content: center;
 }
 
 .header-left_menu-img {
-  width: 25px;
+  width: 2.5rem;
 }
 
 .header-left_youtube-logo-img {
-  width: 90px;
+  width: 9rem;
 }
 
 .header-left_CO {
-  font-size: 9px;
+  font-size: .9rem;
   color: rgb(200, 200, 200);
   position: absolute;
-    top: -6px;
-    right: 1px;
+    top: -.6rem;
+    right: .1rem;
 }
 
 .header-middle {
-  padding-left: 75px;
+  padding-left: 7.5rem;
   display: flex;
     flex: 1;
     align-items: center;
@@ -71,16 +72,16 @@
 
 .header-middle_search-bar {
   font-family: 'Roboto', Arial;
-  font-size: 17px;
+  font-size: 1.7rem;
   font-weight: lighter;
   background-color: transparent;
   color: white;
   width: 0;
-  max-width: 550px;
-  height: 40px;
-  padding: 1px 16px;
-  border: 1px solid rgba(255, 255, 255, 0.15);
-  border-radius: 40px 0 0 40px;
+  max-width: 55rem;
+  height: 4rem;
+  padding: .1rem 1.6rem;
+  border: .1rem solid rgba(255, 255, 255, 0.15);
+  border-radius: 4rem 0 0 4rem;
   flex: 1;
 }
 
@@ -89,7 +90,7 @@
 }
 
 .header-middle_search-button, .header-middle_voice-search-button {
-  height: 40px;
+  height: 4rem;
   cursor: pointer;
   position: relative;
   display: flex;
@@ -100,15 +101,15 @@
 
 .header-middle_search-button {
   background-color: rgba(255, 255, 255, 0.08);
-  width: 65px;
-  border: 1px solid rgba(255, 255, 255, 0.09);
-  border-radius: 0 40px 40px 0;
-  margin-right: 10px;
+  width: 6.5rem;
+  border: .1rem solid rgba(255, 255, 255, 0.09);
+  border-radius: 0 4rem 4rem 0;
+  margin-right: 1rem;
 }
 
 .header-middle_voice-search-button {
   background-color: rgba(255, 255, 255, 0.03);
-  padding: 5px 8px;
+  padding: .5rem .8rem;
   border: none;
   border-radius: 100%;
 }
@@ -118,25 +119,24 @@
 }
 
 .header-middle_search-button__img {
-  width: 26px;
+  width: 2.6rem;
 }
 
 .header-middle_voice-search-button__img {
-  width: 26px;
+  width: 2.6rem;
 }
 
 .header-right {
-  width: 200px;
+  width: 20rem;
   display: flex;
     align-items: center;
     justify-content: end;
-    gap: 10px;
-    flex-shrink: 0;
+    gap: 1rem;
 }
 
 .header-right_upload, .header-right_notifications, .header-right_profile {
-  width: 40px;
-  height: 40px;
+  width: 4rem;
+  height: 4rem;
   cursor: pointer;
   display: flex;
     justify-content: center;
@@ -148,39 +148,58 @@
 }
 
 .header-right_upload-img {
-  width: 15px;
+  width: 1.5rem;
+}
+
+.header-right_notifications {
+  position: relative;
 }
 
 .header-right_notifications-img {
-  width: 24px;
+  width: 2.4rem;
+}
+
+.header-right_notifications-number {
+  font-size: 1rem;
+  background-color: rgb(184, 18, 18);
+  color: white;
+  padding: .05rem .4rem;
+  border-radius: 100%;
+  position: absolute;
+    right: .8rem;
+    top: .6rem;
 }
 
 .header-right_profile {
-  width: 32px;
-  margin-left: 12px;
+  width: 3.2rem;
+  margin-left: 1.2rem;
   display: flex;
     align-items: center;
     justify-content: center;
 }
 
 .header-right_profile-img {
-  width: 32px;
+  width: 3.2rem;
   border-radius: 100%;
 }
 
 .tooltip {
-  font-size: 12px;
-  background-color: rgba(255, 255, 255, 0.25);
+  font-size: 1.2rem;
+  background-color: rgba(100, 100, 100, 0.8);
   color: white;
-  padding: 10px 6px;
+  padding: 1rem .6rem;
   border: none;
-  border-radius: 3px;
+  border-radius: .3rem;
   white-space: nowrap;
   opacity: 0;
   pointer-events: none;
   transition: 0.3s;
   position: absolute;
-    bottom: -50px;
+    bottom: -5rem;
+}
+
+.header-right_upload .tooltip {
+  bottom: -4rem;
 }
 
 .header-middle_search-button:hover .tooltip, .header-middle_voice-search-button:hover .tooltip, .header-right_upload:hover .tooltip, .header-right_notifications:hover .tooltip {
@@ -193,7 +212,7 @@
   }
   .header-middle_search-button {
     background-color: transparent;
-    width: 40px;
+    width: 4rem;
     border: none;
     border-radius: 100%;
     margin-right: 0;
