--- a/youtube/styles/yt-sidebar.css
+++ b/youtube/styles/yt-sidebar.css
@@ -1,10 +1,11 @@
  .sidebar {
-  width: 64px;
+  width: 6.4rem;
+  padding-top: .4rem;
   overflow-y: auto;
   position: fixed;
-    top: 55px;
+    top: 5.5rem;
     bottom: 0;
-    left: 5px;
+    left: .5rem;
   display: flex;
     flex-direction: column;
 }
@@ -19,8 +20,8 @@
 
 .sidebar-section {
   width: 100%;
-  height: 74px;
-  padding: 16px 0 14px;
+  height: 7.4rem;
+  padding: 1.6rem 0 1.4rem;
   cursor: pointer;
   display: flex;
     flex-direction: column;
@@ -29,16 +30,16 @@
 
 .sidebar-section:hover {
   background-color: rgba(255, 255, 255, 0.15);
-  border-radius: 10px;
+  border-radius: 1rem;
 }
 
 .sidebar-section_img {
-  width: 24px;
-  margin-bottom: 6px;
+  width: 2.4rem;
+  margin-bottom: .6rem;
 }
 
 .sidebar-section_text {
-  font-size: 10px;
+  font-size: 1rem;
   font-weight: 500;
   color: white;
 }
@@ -51,27 +52,27 @@
 
 @media (min-width: 1310px) {
   .sidebar {
-    width: 235px;
-    padding-bottom: 5px;
+    width: 23.5rem;
+    padding-bottom: .5rem;
     overflow-y: auto;
   }
 
   .sidebar::-webkit-scrollbar {
     background-color: #0f0f0f;
-    width: 8px;
+    width: .8rem;
     opacity: 0;
   }
 
   .sidebar:hover::-webkit-scrollbar-thumb {
     background-color: rgba(255, 255, 255, 0.4);
-    border-radius: 10px;
+    border-radius: 1rem;
     opacity: 1;
   }
 
   .sidebar-main, .sidebar-secondary, .sidebar-subscriptions, .sidebar-explore, .sidebar-more, .sidebar-others, .sidebar-footer {
-    border-bottom: 1px solid rgba(255, 255, 255, 0.15);
-    padding: 10px 5px 15px 10px;
-    margin-right: 5px;
+    border-bottom: .1rem solid rgba(255, 255, 255, 0.15);
+    padding: 1rem .5rem 1.5rem 1rem;
+    margin-right: .5rem;
     display: flex;
       flex-direction: column;
   }
@@ -81,16 +82,16 @@
   }
 
   .sidebar-section {
-    border-radius: 10px;
-    height: 40px;
-    padding: 0 0 0 10px;
+    border-radius: 1rem;
+    height: 4rem;
+    padding: 0 0 0 1rem;
       flex-direction: row;
       align-items: center;
-      gap: 23px;
+      gap: 2.3rem;
   }
 
   .sidebar-section_text {
-    font-size: 14px;
+    font-size: 1.4rem;
   }
 
   .sidebar-section_img {
@@ -102,25 +103,25 @@
   }
 
   .sidebar-section_img-history, .sidebar-section_img-watchlater, .sidebar-section_img-playlist {
-    width: 20px;
-    margin: 0 2px;
+    width: 2rem;
+    margin: 0 .2rem;
   }
 
   .sidebar-section_img-seemore {
-    width: 14px;
-    margin: 0 5px;
+    width: 1.4rem;
+    margin: 0 .5rem;
   }
 
   .sidebar-subscriptions_text, .sidebar-explore_text, .sidebar-more_text {
-    font-size: 17px;
+    font-size: 1.7rem;
     color: white;
-    padding-left: 10px;
-    margin-bottom: 8px;
+    padding-left: 1rem;
+    margin-bottom: .8rem;
   }
 
   .sidebar-channel {
-    height: 40px;
-    padding: 0 5px 0 10px;
+    height: 4rem;
+    padding: 0 .5rem 0 1rem;
     cursor: pointer;
     display: flex;
       align-items: center;
@@ -128,65 +129,65 @@
 
   .sidebar-channel:hover {
     background-color: rgba(255, 255, 255, 0.15);
-    border-radius: 10px;
+    border-radius: 1rem;
   }
 
   .sidebar-channel_fig {
-    width: 47px;
+    width: 4.7rem;
     display: flex;
   }
 
   .sidebar-channel_img {
-    width: 25px;
+    width: 2.5rem;
     border-radius: 100%;
   }
 
   .sidebar-channel_name {
-    font-size: 14px;
+    font-size: 1.4rem;
     color: white;
     flex: 1;
   }
 
   .sidebar-channel_status {
-    width: 15px;
+    width: 1.5rem;
     color: rgb(64, 150, 230);
-    margin-right: 5px;
+    margin-right: .5rem;
     display: flex;
       justify-content: center;
   }
 
   .sidebar-section_img-trending, .sidebar-section_img-music, .sidebar-section_img-news {
-    width: 20px;
-    margin: 0 2px;
+    width: 2rem;
+    margin: 0 .2rem;
   }
 
   .sidebar-section_img-sports, .sidebar-section_img-learning {
-    width: 26px;
-    margin: 0 -1px;
+    width: 2.6rem;
+    margin: 0 -.1rem;
   }
 
   .sidebar-section_img-sendfeedback {
-    width: 28px;
-    margin: 0 -2px;
+    width: 2.8rem;
+    margin: 0 -.2rem;
   }
 
   .sidebar-footer {
-    padding: 12px 5px 15px 20px;
+    padding: 1.2rem .5rem 1.5rem 2rem;
     border-bottom: none;
-    line-height: 18px;
-      gap: 10px;
+    line-height: 1.8rem;
+      gap: 1rem;
   }
 
   .sidebar-footer a {
-    font-size: 13px;
+    font-size: 1.3rem;
     color: rgba(255, 255, 255, 0.7);
-    margin-right: 5px;
+    margin-right: .5rem;
     display: inline-block;
   }
 
   .sidebar-footer_google {
-    font-size: 12px;
+    font-size: 1.2rem;
     color: rgba(255, 255, 255, 0.3);
-    margin-top: 5px;
+    margin-top: .5rem;
   }
 }
