Implementing the main content for screens 510px or narrower

--- a/youtube/styles/yt-general.css
+++ b/youtube/styles/yt-general.css
@@ -11,7 +11,8 @@ html {
 
 body {
   background-color: #0f0f0f;
-  padding-bottom: 500px;
+  padding-top: 11.2rem;
+  padding-bottom: 50rem;
 }
 
 a {
