--- a/youtube/styles/yt-header.css
+++ b/youtube/styles/yt-header.css
@@ -208,6 +208,9 @@
 }
 
 @media (max-width: 650px) {
+  .header-middle {
+    padding-left: 5rem;
+  }
   .header-middle_search-bar {
     opacity: 0;
   }
