--- a/youtube/styles/yt-topics.css
+++ b/youtube/styles/yt-topics.css
@@ -95,6 +95,7 @@ background-color: rgba(255, 255, 255, 0.2);
 
 @media (min-width: 1310px) {
   .topics {
-    left: 23.5rem;
+    left: 24rem;
+    padding: 0 2.5rem 0 2.5rem;
   }
 }
