--- a/youtube/styles/yt-general.css
+++ b/youtube/styles/yt-general.css
@@ -10,11 +10,22 @@ html {
 }
 
 body {
+  font-size: 'Roboto', Arial;
   background-color: #0f0f0f;
   padding-top: 11.2rem;
-  padding-bottom: 50rem;
+}
+
+body::-webkit-scrollbar {
+  background-color: #0f0f0f;
+  width: .8rem;
+}
+
+body::-webkit-scrollbar-thumb {
+  background-color: rgba(255, 255, 255, 0.7);
+  border-radius: 1rem;
 }
 
 a {
   text-decoration: none;
+  color: inherit;
 }
