--- a/youtube/styles/yt-header.css
+++ b/youtube/styles/yt-header.css
@@ -1,4 +1,5 @@
 .header {
+  font-size: 'Roboto';
   background-color: #0f0f0f;
   height: 5.6rem;
   padding: 0 3rem 0 1.5rem;
@@ -14,12 +15,12 @@
 
 .header-left, .header-middle, .header-right {
   height: 100%;
+  display: flex;
 }
 
 .header-left {
   width: 16.5rem;
-  display: flex;
-  align-items: center;
+    align-items: center;
     justify-content: space-between;
 }
 
@@ -36,6 +37,10 @@
     justify-content: center;
 }
 
+.header-left_menu-img {
+  width: 2.5rem;
+}
+
 .header-left_menu:hover {
   background-color: rgba(255, 255, 255, 0.15);
   border-radius: 100%;
@@ -44,11 +49,7 @@
 .header-left_youtube-logo {
   width: 12.5rem;
   position: relative;
-  justify-content: center;
-}
-
-.header-left_menu-img {
-  width: 2.5rem;
+    justify-content: center;
 }
 
 .header-left_youtube-logo-img {
@@ -64,26 +65,14 @@
 }
 
 .header-middle {
-  padding-left: 7.5rem;
-  display: flex;
-    flex: 1;
+  flex: 1;
+  padding-left: 0;
     align-items: center;
-    justify-content: center;
+    justify-content: end;
 }
 
 .header-middle_search-bar {
-  font-family: 'Roboto', Arial;
-  font-size: 1.7rem;
-  font-weight: lighter;
-  background-color: transparent;
-  color: white;
-  width: 0;
-  max-width: 55rem;
-  height: 4rem;
-  padding: .1rem 1.6rem;
-  border: .1rem solid rgba(255, 255, 255, 0.15);
-  border-radius: 4rem 0 0 4rem;
-  flex: 1;
+  display: none;
 }
 
 .header-middle_search-bar::placeholder {
@@ -101,18 +90,19 @@
 }
 
 .header-middle_search-button {
-  background-color: rgba(255, 255, 255, 0.08);
-  width: 6.5rem;
-  border: .1rem solid rgba(255, 255, 255, 0.09);
-  border-radius: 0 4rem 4rem 0;
-  margin-right: 1rem;
+  background-color: transparent;
+  width: 4rem;
+  border: none;
+  border-radius: 100%;
+  margin-right: 0;
+  }
+
+.header-middle_search-button:hover {
+  background-color: rgba(255, 255, 255, 0.1);
 }
 
 .header-middle_voice-search-button {
-  background-color: rgba(255, 255, 255, 0.03);
-  padding: .5rem .8rem;
-  border: none;
-  border-radius: 100%;
+  display: none;
 }
 
 .header-middle_voice-search-button:hover {
@@ -124,18 +114,17 @@
 }
 
 .header-middle_voice-search-button__img {
-  width: 2.6rem;
+  width: 2.4rem;
 }
 
 .header-right {
-  width: 20rem;
-  display: flex;
+  width: 10rem;
     align-items: center;
     justify-content: end;
     gap: 1rem;
 }
 
-.header-right_upload, .header-right_notifications, .header-right_profile {
+.header-right_upload, .header-right_profile {
   width: 4rem;
   height: 4rem;
   cursor: pointer;
@@ -143,32 +132,17 @@
     justify-content: center;
 }
 
-.header-right_upload:hover, .header-right_notifications:hover {
-  background-color: rgba(255, 255, 255, 0.15);
-  border-radius: 100%;
-}
-
 .header-right_upload-img {
   width: 1.5rem;
 }
 
 .header-right_notifications {
-  position: relative;
+  display: none;
 }
 
-.header-right_notifications-img {
-  width: 2.4rem;
-}
-
-.header-right_notifications-number {
-  font-size: 1rem;
-  background-color: rgb(184, 18, 18);
-  color: white;
-  padding: .05rem .4rem;
+.header-right_upload:hover {
+  background-color: rgba(255, 255, 255, 0.15);
   border-radius: 100%;
-  position: absolute;
-    right: .8rem;
-    top: .6rem;
 }
 
 .header-right_profile {
@@ -185,8 +159,9 @@
 }
 
 .tooltip {
+  font-family: 'Roboto';
   font-size: 1.2rem;
-  background-color: rgba(100, 100, 100, 0.8);
+  background-color: rgba(100, 100, 100, 0.9);
   color: white;
   padding: 1rem .6rem;
   border: none;
@@ -203,25 +178,89 @@
   bottom: -4rem;
 }
 
-.header-middle_search-button:hover .tooltip, .header-middle_voice-search-button:hover .tooltip, .header-right_upload:hover .tooltip, .header-right_notifications:hover .tooltip {
+.header-middle_search-button:hover .tooltip, .header-right_upload:hover .tooltip{
   opacity: 1;
 }
 
-@media (max-width: 650px) {
-  .header-middle {
-    padding-left: 5rem;
-  }
-  .header-middle_search-bar {
-    opacity: 0;
-  }
-  .header-middle_search-button {
-    background-color: transparent;
-    width: 4rem;
+@media (min-width: 429px) {
+  .header-middle_voice-search-button {
+    background-color: rgba(255, 255, 255, 0.03);
+    padding: .5rem .8rem;
     border: none;
     border-radius: 100%;
-    margin-right: 0;
+    display: flex;
   }
-  .header-middle_search-button:hover {
-    background-color: rgba(255, 255, 255, 0.1);
+
+  .header-right {
+    width: 14rem;
+  }
+
+  .header-right_notifications {
+    width: 4rem;
+    height: 4rem;
+    cursor: pointer;
+    position: relative;
+    display: flex;
+      justify-content: center;
+   }
+
+  .header-right_notifications-img {
+    width: 2.4rem;
+  }
+  
+  .header-right_notifications-number {
+    font-size: 1.2rem;
+    background-color: rgb(201, 0, 0);
+    color: white;
+    padding: 0 .45rem;
+    border: .1rem solid rgb(85, 1, 1);
+    border-radius: 100%;
+    position: absolute;
+      right: .2rem;
+      top: .5rem;
+  }
+
+  .header-right_notifications:hover {
+    background-color: rgba(255, 255, 255, 0.15);
+    border-radius: 100%;
+  }
+
+  .header-middle_voice-search-button:hover .tooltip, .header-right_notifications:hover .tooltip {
+    opacity: 1;
+  }
+}
+
+@media (min-width: 656px) {
+  .header-middle {
+    padding-left: 7.5rem;
+    justify-content: center;
+  }
+  
+  .header-middle_search-bar {
+    font-family: 'Roboto', Arial;
+    font-size: 1.7rem;
+    font-weight: lighter;
+    background-color: transparent;
+    color: white;
+    width: 0;
+    flex: 1;
+    max-width: 54rem;
+    height: 4rem;
+    padding: .1rem .5rem .1rem 1.5rem;
+    border: .1rem solid rgba(255, 255, 255, 0.15);
+    border-radius: 4rem 0 0 4rem;
+    display: flex;
+  }
+
+  .header-middle_search-button {
+    background-color: rgba(255, 255, 255, 0.08);
+    width: 6.5rem;
+    border: .1rem solid rgba(255, 255, 255, 0.09);
+    border-radius: 0 4rem 4rem 0;
+    margin-right: 1rem;
+  }
+
+  .header-right {
+    width: 22rem;
   }
 }
