--- a/youtube/styles/yt-sidebar.css
+++ b/youtube/styles/yt-sidebar.css
@@ -1,56 +1,57 @@
  .sidebar {
-  width: 6.4rem;
-  padding-top: .4rem;
-  overflow-y: auto;
-  position: fixed;
-    top: 5.5rem;
-    bottom: 0;
-    left: .5rem;
-  display: flex;
-    flex-direction: column;
-}
-
-.sidebar-secondary .sidebar-section, .sidebar-subscriptions, .sidebar-explore, .sidebar-more, .sidebar-others, .sidebar-footer {
+  font-family: 'Roboto';
   display: none;
 }
 
-.sidebar-secondary .sidebar-section_library {
-  display: flex;
-}
-
-.sidebar-section {
-  width: 100%;
-  height: 7.4rem;
-  padding: 1.6rem 0 1.4rem;
-  cursor: pointer;
-  display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.sidebar-section:hover {
-  background-color: rgba(255, 255, 255, 0.15);
-  border-radius: 1rem;
-}
-
-.sidebar-section_img {
-  width: 2.4rem;
-  margin-bottom: .6rem;
-}
-
-.sidebar-section_text {
-  font-size: 1rem;
-  font-weight: 500;
-  color: white;
-}
-
-@media (max-width: 790px) {
+@media (min-width: 792px) {
   .sidebar {
+    width: 6.4rem;
+    padding-top: .4rem;
+    overflow-y: auto;
+    position: fixed;
+      top: 5.5rem;
+      bottom: 0;
+      left: .5rem;
+    display: flex;
+      flex-direction: column;
+  }
+  
+  .sidebar-secondary .sidebar-section, .sidebar-subscriptions, .sidebar-explore, .sidebar-more, .sidebar-others, .sidebar-footer {
     display: none;
+  }
+  
+  .sidebar-secondary .sidebar-section_library {
+    display: flex;
+  }
+  
+  .sidebar-section {
+    width: 100%;
+    height: 7.4rem;
+    padding: 1.6rem 0 1.4rem;
+    cursor: pointer;
+    display: flex;
+      flex-direction: column;
+      align-items: center;
+  }
+  
+  .sidebar-section:hover {
+    background-color: rgba(255, 255, 255, 0.15);
+    border-radius: 1rem;
+  }
+  
+  .sidebar-section_img {
+    width: 2.4rem;
+    margin-bottom: .6rem;
+  }
+  
+  .sidebar-section_text {
+    font-size: 1rem;
+    font-weight: 500;
+    color: white;
   }
 }
 
-@media (min-width: 1310px) {
+@media (min-width: 1313px) {
 
   .sidebar {
     width: 23.5rem;
