--- a/youtube/styles/yt-topics.css
+++ b/youtube/styles/yt-topics.css
@@ -1,7 +1,7 @@
 .topics {
   background-color: #0f0f0f;
   height: 5.6rem;
-  padding: 0 3rem 0 3rem;
+  padding: 0 3rem;
   position: fixed;
     top: 5.6rem;
     right: 0;
@@ -17,7 +17,7 @@
   font-weight: 400;
   background-color: rgba(255, 255, 255, 0.1);
   color: white;
-  padding: .95rem 1.3rem;
+  padding: .85rem 1.3rem;
   border: none;
   border-radius: .8rem;
   white-space: nowrap;
@@ -53,10 +53,10 @@ background-color: rgba(255, 255, 255, 0.2);
 }
 
 .topics-next_arrow {
-  font-size: 1.8rem;
+  font-size: 1.4rem;
   background-color: #0f0f0f;
   color: white;
-  padding: 1rem 1.5rem;
+  padding: 1.2rem 1.6rem;
   border: none;
   border-radius: 100%;
   cursor: pointer;
@@ -87,13 +87,13 @@ background-color: rgba(255, 255, 255, 0.2);
   opacity: 1;
 }
 
-@media (min-width: 790px) {
+@media (min-width: 792px) {
   .topics {
     left: 6.4rem;
   }
 }
 
-@media (min-width: 1310px) {
+@media (min-width: 1313px) {
   .topics {
     left: 24rem;
     padding: 0 2.5rem 0 2.5rem;
