--- a/youtube/styles/yt-header.css
+++ b/youtube/styles/yt-header.css
@@ -1,84 +1,97 @@
 .header {
-  font-size: 'Roboto';
+  font-family: 'Roboto';
   background-color: #0f0f0f;
   height: 5.6rem;
   padding: 0 3rem 0 1.5rem;
-  position: fixed;
+  position: fixed; /*Sticking the Header to the top and to the sides*/
     top: 0;
     right: 0;
     left: 0;
-    z-index: 10;
+    z-index: 10; /*To be on top of sidebar*/
   display: flex;
     align-items: center;
     justify-content: space-between;
 }
 
-.header-left, .header-middle, .header-right {
+/*Left, Central, and Right section*/
+.header-left, .header-middle, .header-right { /*Making them as high as the header*/
   height: 100%;
   display: flex;
 }
 
+/*Left Section*/
 .header-left {
   width: 16.5rem;
     align-items: center;
     justify-content: space-between;
 }
 
+/*Hamburguer Menu container, and YouTube Logo container*/
 .header-left_menu, .header-left_youtube-logo {
   cursor: pointer;
   display: flex;
     align-items: center;
 }
 
+/*Hamburguer Menu container*/
 .header-left_menu {
   width: 4rem;
   height: 4rem;
-  transition: .15s;
+  transition: .15s; /*Adding transition time for 'Background-color change when Hover'*/
     justify-content: center;
 }
 
+/*Hamburguer Menu image*/
 .header-left_menu-img {
   width: 2.5rem;
 }
 
+/*When hovers Hamburguer Menu container*/
 .header-left_menu:hover {
   background-color: rgba(255, 255, 255, 0.15);
   border-radius: 100%;
 }
 
+/*YouTube Logo container*/
 .header-left_youtube-logo {
   width: 12.5rem;
-  position: relative;
+  position: relative; /*Making this container relative for adding the 'CO'*/
     justify-content: center;
 }
 
+/*YouTube Logo image*/
 .header-left_youtube-logo-img {
   width: 9rem;
 }
 
+/*CO*/
 .header-left_CO {
   font-size: .9rem;
   color: rgb(200, 200, 200);
-  position: absolute;
+  position: absolute; /*Making this element absolute to accomodate on top of its parent container*/
     top: -.6rem;
     right: .1rem;
 }
 
+/*Central Section*/
 .header-middle {
-  flex: 1;
+  flex: 1; /*Adjusting its content according the window size*/
   padding-left: 0;
     align-items: center;
     justify-content: end;
 }
 
-.header-middle_search-bar {
+/*Search Bar*/
+.header-middle_search-bar { /*Hiding the Search Bar for now*/
   display: none;
 }
 
+/*Search Bar placeholder*/
 .header-middle_search-bar::placeholder {
   color: rgba(255, 255, 255, 0.4);
 }
 
+/*Search and Voice Search buttons*/
 .header-middle_search-button, .header-middle_voice-search-button {
   height: 4rem;
   cursor: pointer;
@@ -89,6 +102,7 @@
     justify-content: center;
 }
 
+/*Search button*/
 .header-middle_search-button {
   background-color: transparent;
   width: 4rem;
@@ -97,26 +111,27 @@
   margin-right: 0;
   }
 
-.header-middle_search-button:hover {
-  background-color: rgba(255, 255, 255, 0.1);
-}
-
+/*Voice Search button*/
 .header-middle_voice-search-button {
   display: none;
 }
 
-.header-middle_voice-search-button:hover {
+/*When hovers Search and Voice Search buttons*/
+.header-middle_search-button:hover, .header-middle_voice-search-button:hover {
   background-color: rgba(255, 255, 255, 0.1);
 }
 
+/*Search button image*/
 .header-middle_search-button__img {
   width: 2.6rem;
 }
 
+/*Voice Search button image*/
 .header-middle_voice-search-button__img {
   width: 2.4rem;
 }
 
+/*Right Section*/
 .header-right {
   width: 10rem;
     align-items: center;
@@ -124,6 +139,7 @@
     gap: 1rem;
 }
 
+/*Upload and Profile containers*/
 .header-right_upload, .header-right_profile {
   width: 4rem;
   height: 4rem;
@@ -132,19 +148,23 @@
     justify-content: center;
 }
 
+/*Upload image*/
 .header-right_upload-img {
   width: 1.5rem;
 }
 
-.header-right_notifications {
+/*Notifications container*/
+.header-right_notifications { /*Hiding the Notifications Button for now*/
   display: none;
 }
 
+/*When hovers Upload container*/
 .header-right_upload:hover {
   background-color: rgba(255, 255, 255, 0.15);
   border-radius: 100%;
 }
 
+/*Profile container*/
 .header-right_profile {
   width: 3.2rem;
   margin-left: 1.2rem;
@@ -153,11 +173,13 @@
     justify-content: center;
 }
 
+/*Profile image*/
 .header-right_profile-img {
   width: 3.2rem;
   border-radius: 100%;
 }
 
+/*Tooltip*/
 .tooltip {
   font-family: 'Roboto';
   font-size: 1.2rem;
@@ -166,53 +188,61 @@
   padding: 1rem .6rem;
   border: none;
   border-radius: .3rem;
-  white-space: nowrap;
-  opacity: 0;
-  pointer-events: none;
-  transition: 0.3s;
+  white-space: nowrap; /*Avoiding line breaks*/
+  opacity: 0; /*Hiding the Tooltip for now*/
+  pointer-events: none; /*Avoiding actions when the mouse hovers the Tooltip*/
+  transition: 0.3s; /*Adding a transition time to appear in the screen*/
   position: absolute;
     bottom: -5rem;
 }
 
+/*Tooltip from Upload container*/
 .header-right_upload .tooltip {
   bottom: -4rem;
 }
 
-.header-middle_search-button:hover .tooltip, .header-right_upload:hover .tooltip{
+/*Tooltip when hovers Search button and Upload container*/
+.header-middle_search-button:hover .tooltip, .header-right_upload:hover .tooltip {/*Making the Tooltips appear when the mouse hovers the buttons*/
   opacity: 1;
 }
 
+/*When the Window is 429px or wider*/
 @media (min-width: 429px) {
+  /*Voice Search button*/
   .header-middle_voice-search-button {
     background-color: rgba(255, 255, 255, 0.03);
     padding: .5rem .8rem;
     border: none;
     border-radius: 100%;
-    display: flex;
+    display: flex; /*Making this button appear*/
   }
 
+  /*Right Section*/
   .header-right {
-    width: 14rem;
+    width: 14rem; /*Making this section wider*/
   }
 
+  /*Notifications Container*/
   .header-right_notifications {
     width: 4rem;
     height: 4rem;
     cursor: pointer;
     position: relative;
-    display: flex;
+    display: flex; /*Making this container appear*/
       justify-content: center;
    }
-
+   
+  /*Notifications image*/
   .header-right_notifications-img {
     width: 2.4rem;
   }
   
+  /*Notifications number*/
   .header-right_notifications-number {
     font-size: 1.2rem;
     background-color: rgb(201, 0, 0);
     color: white;
-    padding: 0 .45rem;
+    padding: .05rem .4rem;
     border: .1rem solid rgb(85, 1, 1);
     border-radius: 100%;
     position: absolute;
@@ -220,22 +250,27 @@
       top: .5rem;
   }
 
+  /*When hovers the Notifications container*/
   .header-right_notifications:hover {
     background-color: rgba(255, 255, 255, 0.15);
     border-radius: 100%;
   }
 
+  /*Tooltip when hovers the Voice Search button and Notifications container*/
   .header-middle_voice-search-button:hover .tooltip, .header-right_notifications:hover .tooltip {
     opacity: 1;
   }
 }
 
+/*When the Window is 656px or wider*/
 @media (min-width: 656px) {
+  /*Central Section*/
   .header-middle {
-    padding-left: 7.5rem;
+    padding-left: 7.5rem; /*Adding a separation between Left and Central sections*/
     justify-content: center;
   }
   
+  /*Search Bar*/
   .header-middle_search-bar {
     font-family: 'Roboto', Arial;
     font-size: 1.7rem;
@@ -249,9 +284,10 @@
     padding: .1rem .5rem .1rem 1.5rem;
     border: .1rem solid rgba(255, 255, 255, 0.15);
     border-radius: 4rem 0 0 4rem;
-    display: flex;
+    display: flex; /*Making the Search Bar appear*/
   }
 
+  /*Search Button*/
   .header-middle_search-button {
     background-color: rgba(255, 255, 255, 0.08);
     width: 6.5rem;
@@ -260,6 +296,7 @@
     margin-right: 1rem;
   }
 
+  /*Right Sections*/
   .header-right {
     width: 22rem;
   }
