--- a/youtube/styles/yt-topics.css
+++ b/youtube/styles/yt-topics.css
@@ -1,9 +1,10 @@
+/*Topics*/
 .topics {
   background-color: #0f0f0f;
   height: 5.6rem;
   padding: 0 3rem;
   position: fixed;
-    top: 5.6rem;
+    top: 5.6rem; /*Making this element sitcked just below the Header*/
     right: 0;
     left: 0;
     z-index: 9;
@@ -12,6 +13,7 @@
     gap: 1.3rem;
 }
 
+/*General button*/
 .topics-button {
   font-size: 1.4rem;
   font-weight: 400;
@@ -20,38 +22,43 @@
   padding: .85rem 1.3rem;
   border: none;
   border-radius: .8rem;
-  white-space: nowrap;
+  white-space: nowrap; /*Avoiding line breaks*/
   cursor: pointer;
   transition: .4s;
 }
 
+/*Music button*/
 .topics-button_music {
   background-color: white;
   color: black;
 }
 
+/*When hovers the general button*/
 .topics-button:hover {
 background-color: rgba(255, 255, 255, 0.2);
 }
 
+/*When hovers the Music button*/
 .topics-button_music:hover {
   background-color: white;
 }
 
+/*Next button*/
 .topics-next {
   background-color: #0f0f0f;
   height: 5rem;
   width: 6rem;
   padding-right: .7rem;
   border: none;
-  box-shadow: -2rem 0 1rem #0f0f0f;
-  position: absolute;
+  box-shadow: -2rem 0 1rem #0f0f0f; /*Adding a difumination effect on its left side*/
+  position: absolute; /*Making this element able to be on top of general buttons*/
     right: 0;
   display: flex;
     align-items: center;
     justify-content: end;
 }
 
+/*Next Arrow*/
 .topics-next_arrow {
   font-size: 1.4rem;
   background-color: #0f0f0f;
@@ -63,10 +70,12 @@ background-color: rgba(255, 255, 255, 0.2);
   transition: .05s;
 }
 
+/*When hovers the Next Arrow*/
 .topics-next_arrow:hover {
   background-color: rgba(255, 255, 255, 0.2);
 }
 
+/*Tooltip from Next button*/
 .topics-tooltip {
   font-size: 1.2rem;
   background-color: rgba(100, 100, 100, 0.8);
@@ -83,18 +92,22 @@ background-color: rgba(255, 255, 255, 0.2);
     right: .8rem;
 }
 
+/*Tooltip when hovers the Next Arrow*/
 .topics-next_arrow:hover .topics-tooltip {
   opacity: 1;
 }
 
+/*When the window is 792px or wider*/
 @media (min-width: 792px) {
-  .topics {
+  /*Topics*/
+  .topics { /*Accomodating it after the appearing of the sidebar*/
     left: 6.4rem;
   }
 }
 
 @media (min-width: 1313px) {
-  .topics {
+  /*Topics*/
+  .topics { /*Accomodating it after the extension of the sidebar*/
     left: 24rem;
     padding: 0 2.5rem 0 2.5rem;
   }
