--- a/youtube/styles/yt-sidebar.css
+++ b/youtube/styles/yt-sidebar.css
@@ -12,6 +12,7 @@
       top: 5.5rem;
       bottom: 0;
       left: .5rem;
+      z-index: 15;
     display: flex;
       flex-direction: column;
   }
@@ -35,7 +36,7 @@
   }
   
   .sidebar-section:hover {
-    background-color: rgba(255, 255, 255, 0.15);
+    background-color: var(--white-15);
     border-radius: 1rem;
   }
   
@@ -60,19 +61,19 @@
   }
 
   .sidebar::-webkit-scrollbar {
-    background-color: #0f0f0f;
+    background-color: var(--black-background);
     width: .8rem;
     opacity: 0;
   }
 
   .sidebar:hover::-webkit-scrollbar-thumb {
-    background-color: rgba(255, 255, 255, 0.4);
+    background-color: var(--white-40);
     border-radius: 1rem;
     opacity: 1;
   }
 
   .sidebar-main, .sidebar-secondary, .sidebar-subscriptions, .sidebar-explore, .sidebar-more, .sidebar-others, .sidebar-footer {
-    border-bottom: .1rem solid rgba(255, 255, 255, 0.15);
+    border-bottom: .1rem solid var(--white-15);
     padding: 1rem .5rem 1.5rem 1rem;
     margin-right: .5rem;
     display: flex;
@@ -101,7 +102,7 @@
   }
 
   .sidebar-section_home {
-    background-color: rgba(255, 255, 255, 0.15);
+    background-color: var(--white-15);
   }
 
   .sidebar-section_img-history, .sidebar-section_img-watchlater, .sidebar-section_img-playlist {
@@ -130,7 +131,7 @@
   }
 
   .sidebar-channel:hover {
-    background-color: rgba(255, 255, 255, 0.15);
+    background-color: var(--white-15);
     border-radius: 1rem;
   }
 
@@ -182,7 +183,7 @@
 
   .sidebar-footer a {
     font-size: 1.3rem;
-    color: rgba(255, 255, 255, 0.7);
+    color: var(--white-70);
     margin-right: .5rem;
     display: inline-block;
   }
