--- a/youtube/styles/yt-topics.css
+++ b/youtube/styles/yt-topics.css
@@ -1,5 +1,5 @@
 .topics {
-  background-color: #0f0f0f;
+  background-color: var(--black-background);
   height: 5.6rem;
   padding: 0 3rem;
   position: fixed;
@@ -15,7 +15,7 @@
 .topics-button {
   font-size: 1.4rem;
   font-weight: 400;
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: var(--white-10);
   color: white;
   padding: .85rem 1.3rem;
   border: none;
@@ -31,7 +31,7 @@
 }
 
 .topics-button:hover {
-background-color: rgba(255, 255, 255, 0.2);
+background-color: var(--white-20);
 }
 
 .topics-button_music:hover {
@@ -39,12 +39,12 @@ background-color: rgba(255, 255, 255, 0.2);
 }
 
 .topics-next {
-  background-color: #0f0f0f;
+  background-color: var(--black-background);
   height: 5rem;
   width: 6rem;
   padding-right: .7rem;
   border: none;
-  box-shadow: -2rem 0 1rem #0f0f0f;
+  box-shadow: -2rem 0 1rem var(--black-background);
   position: absolute;
     right: 0;
   display: flex;
@@ -54,7 +54,7 @@ background-color: rgba(255, 255, 255, 0.2);
 
 .topics-next_arrow {
   font-size: 1.4rem;
-  background-color: #0f0f0f;
+  background-color: var(--black-background);
   color: white;
   padding: 1.2rem 1.6rem;
   border: none;
@@ -64,12 +64,12 @@ background-color: rgba(255, 255, 255, 0.2);
 }
 
 .topics-next_arrow:hover {
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: var(--white-20);
 }
 
 .topics-tooltip {
   font-size: 1.2rem;
-  background-color: rgba(100, 100, 100, 0.8);
+  background-color: var(--gray-tooltip);
   color: white;
   padding: 1rem .6rem;
   border: none;
