--- a/youtube/styles/yt-header.css
+++ b/youtube/styles/yt-header.css
@@ -1,6 +1,6 @@
 .header {
   font-size: 'Roboto';
-  background-color: #0f0f0f;
+  background-color: var(--black-background);
   height: 5.6rem;
   padding: 0 3rem 0 1.5rem;
   position: fixed;
@@ -42,7 +42,7 @@
 }
 
 .header-left_menu:hover {
-  background-color: rgba(255, 255, 255, 0.15);
+  background-color: var(--white-15);
   border-radius: 100%;
 }
 
@@ -58,7 +58,7 @@
 
 .header-left_CO {
   font-size: .9rem;
-  color: rgb(200, 200, 200);
+  color: var(--white-gray);
   position: absolute;
     top: -.6rem;
     right: .1rem;
@@ -76,7 +76,7 @@
 }
 
 .header-middle_search-bar::placeholder {
-  color: rgba(255, 255, 255, 0.4);
+  color: var(--white-40);
 }
 
 .header-middle_search-button, .header-middle_voice-search-button {
@@ -98,7 +98,7 @@
   }
 
 .header-middle_search-button:hover {
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: var(--white-15);
 }
 
 .header-middle_voice-search-button {
@@ -106,7 +106,7 @@
 }
 
 .header-middle_voice-search-button:hover {
-  background-color: rgba(255, 255, 255, 0.1);
+  background-color: var(--white-15);
 }
 
 .header-middle_search-button__img {
@@ -141,7 +141,7 @@
 }
 
 .header-right_upload:hover {
-  background-color: rgba(255, 255, 255, 0.15);
+  background-color: var(--white-15);
   border-radius: 100%;
 }
 
@@ -161,7 +161,7 @@
 .tooltip {
   font-family: 'Roboto';
   font-size: 1.2rem;
-  background-color: rgba(100, 100, 100, 0.9);
+  background-color: var(--gray-tooltip);
   color: white;
   padding: 1rem .6rem;
   border: none;
@@ -184,7 +184,7 @@
 
 @media (min-width: 429px) {
   .header-middle_voice-search-button {
-    background-color: rgba(255, 255, 255, 0.03);
+    background-color: var(--black-3);
     padding: .5rem .8rem;
     border: none;
     border-radius: 100%;
@@ -210,10 +210,10 @@
   
   .header-right_notifications-number {
     font-size: 1.2rem;
-    background-color: rgb(201, 0, 0);
+    background-color: var(--red-youtube);
     color: white;
     padding: 0 .45rem;
-    border: .1rem solid rgb(85, 1, 1);
+    border: .1rem solid var(--red-dark);
     border-radius: 100%;
     position: absolute;
       right: .2rem;
@@ -221,7 +221,7 @@
   }
 
   .header-right_notifications:hover {
-    background-color: rgba(255, 255, 255, 0.15);
+    background-color: var(--white-15);
     border-radius: 100%;
   }
 
@@ -247,15 +247,16 @@
     max-width: 54rem;
     height: 4rem;
     padding: .1rem .5rem .1rem 1.5rem;
-    border: .1rem solid rgba(255, 255, 255, 0.15);
+    border: .1rem solid var(--white-15);
     border-radius: 4rem 0 0 4rem;
     display: flex;
   }
 
   .header-middle_search-button {
-    background-color: rgba(255, 255, 255, 0.08);
+    background-color: rgba(255, 255, 255, 0.07);
     width: 6.5rem;
-    border: .1rem solid rgba(255, 255, 255, 0.09);
+    border: .1rem solid rgba(255, 255, 255, 0.08);
+    border-left: none;
     border-radius: 0 4rem 4rem 0;
     margin-right: 1rem;
   }
