--- a/youtube/youtube-videos/styles/yt-video-main.css
+++ b/youtube/youtube-videos/styles/yt-video-main.css
@@ -6,6 +6,8 @@ body { /*Adding space for the Header*/
 .main {
   background-color: pink;
   width: 100%;
+  display: flex;
+    flex-direction: column;
 }
 
 /*Video and Video container*/
@@ -109,4 +111,12 @@ body { /*Adding space for the Header*/
 /*Channel Icon Tooltip when hovers Channel Icon container*/
 .main-video_channel-icon:hover .main-video_channel-tooltip {
   opacity: 1;
+}
+
+/*Video Title*/
+.main-title {
+  background-color: ;
+  color: white;
+  width: 100%;
+
 }
