--- a/youtube/youtube-videos/styles/yt-video-main.css
+++ b/youtube/youtube-videos/styles/yt-video-main.css
@@ -26,6 +26,7 @@ body { /*Adding space for the Header*/
 /*More Info container*/
 .video-moreinfo {
   width: 3rem;
+  cursor: pointer;
   position: absolute;
     top: 1.5rem;
     right: 1.5rem;
@@ -62,12 +63,15 @@ body { /*Adding space for the Header*/
 
 /*Channel Icon container*/
 .video-channel_icon {
-  width: 4rem;
+  width: 5rem;
   height: 4rem;
+  cursor: pointer;
   transition: .2s;
   position: absolute;
-    right: 1rem;
+    right: 1.5rem;
     bottom: 1.2rem;
+  display: flex;
+    justify-content: end;
 }
 
 /*Channel Icon container when hovers the Video container*/
@@ -77,7 +81,7 @@ body { /*Adding space for the Header*/
 
 /*Channel Icon image*/
 .video-channel_img {
-  width: 100%;
+  width: 80%;
   opacity: .5;
 }
 
@@ -93,7 +97,7 @@ body { /*Adding space for the Header*/
   opacity: 0;
   position: absolute;
     top: -3.5rem;
-    left: -15rem;
+    left: -13rem;
   display: flex;
     flex-direction: column;
     gap: .7rem;
@@ -114,10 +118,12 @@ body { /*Adding space for the Header*/
   padding: 1rem 1.6rem;
   border: none;
   border-radius: 3rem;
+  cursor: pointer;
 }
 
 /*Channel Icon Tooltip when hovers Channel Icon container*/
 .video-channel_icon:hover .video-channel_tooltip {
+  pointer-events: all;
   opacity: 1;
 }
 
@@ -236,7 +242,7 @@ body { /*Adding space for the Header*/
   font-weight: 600;
   background-color: var(--white-10);
   color: white;
-  padding: .5rem .8rem;
+  padding: .4rem .8rem;
   border-radius: .4rem;
   white-space: nowrap; /*Avoiding Line Breaks*/
   pointer-events: none; /*Avoiding events when hover it*/
@@ -394,9 +400,92 @@ body { /*Adding space for the Header*/
     right: -13rem;
 }
 
+/*Right Controls*/
 .video-panel_controls-right {
   background-color: black;
   flex: 1;
+  padding-left: .2rem;
   position: relative;
   z-index: 10;
+  display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+
+/*Autoplay Image*/
+.video-panel_img-autoplay {
+  height: 110%;
+  margin-top: .6rem;
+}
+
+/*Autoplay Tooltip*/
+.autoplay-tooltip {
+    right: -3.5rem;
+}
+
+/*Subtitles and Miniplayer Images*/
+.video-panel_img-subtitles, .video-panel_img-miniplayer {
+  height: 70%;
+  margin-top: .4rem;
+}
+
+/*Subtitles Tooltip*/
+.subtitles-tooltip {
+  right: -9rem;
+}
+
+/*Settings tooltip*/
+.settings-tooltip {
+  right: -1.6rem;
+}
+
+/*Settings Image*/
+.video-panel_img-settings {
+  height: 60%;
+  margin-top: .3rem;
+}
+
+/*Settings HD*/
+.video-panel_img-settings__hd {
+  font-size: .7rem;
+  background-color: var(--red-youtube);
+  color: white;
+  height: 1rem;
+  padding: 0 .1rem;
+  position: absolute;
+    top: .7rem;
+    right: .6rem;
+  display: flex;
+    align-items: start;
+}
+
+/*Miniplayer Image*/
+.video-panel_img-miniplayer {
+  height: 70%;
+}
+
+/*Miniplayer Tooltip*/
+.miniplayer-tooltip {
+  right: -3.2rem;
+}
+
+/*Default View and Fullscreen Images*/
+.video-panel_img-defaultview, .video-panel_img-fullscreen {
+  height: 120%;
+  margin-top: .8rem;
+}
+
+/*Default View Tooltip*/
+.defaultview-tooltip {
+  right: -3.2rem;
+}
+
+/*Fullscreen Tooltip*/
+.fullscreen-tooltip {
+  right: 0rem;
+}
+
+/*Getting Fullscreen Image bigger when hovers it*/
+.video-panel_fig:hover .video-panel_img-fullscreen {
+  height: 135%;
 }
