--- a/youtube/styles/yt-general.css
+++ b/youtube/styles/yt-general.css
@@ -1,5 +1,6 @@
 :root {
   --black-background: #0f0f0f;
+  --black-85: rgba(0, 0, 0, 0.85);
   --black-70: rgba(0, 0, 0, 0.7);
   --black-18: rgba(255, 255, 255, 0.18);
   --black-10: rgba(255, 255, 255, 0.1);
